--- a/index.html
+++ b/index.html
@@ -16,20 +16,45 @@
         <!-- <div class="fixed-top container">
             <h1>Vue Dischi Musicali</h1>  
         </div> -->
-        <div class="row">
-            <h1>Vue Dischi Musicali</h1>  
-        </div>
-        <div class="row">
-            <div class="album col-4" v-for='album in albumsUnfiltered'>
-                <div class="card">
-                    <img :src="album.poster" alt="">
-                    <h3>{{album.title}}</h3>
-                    <h4>{{album.author}}</h4>
-                    <span>{{album.year}}</span>
+        <nav class="navbar my-nav">
+            <h1 class="mb-0">Vue Dischi Musicali</h1>
+            <div>
+                <select v-model="selectedGenre" @change='genresSelect'>
+                    <option disabled value="">Filtra per Genere</option>
+                    <option value="all">Tutti</option>
+                    <option v-for='(genre, index) in genresFiltered' :key='index'>{{genresFiltered[index]}}</option>
+                </select>
+            </div>
+            <!-- <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Dropdown button
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+            </div> -->
+        </nav>
+
+        <section>
+            <div class="row">
+                <div class="album col-4" v-for='album in albums'>
+                    <div class="card text-center">
+                        <img :src="album.poster" class='mx-auto' alt="">
+                        <div class="card-body">
+                            <h3>{{album.title}}</h3>
+                            <h4>{{album.author}}</h4>
+                            <span>{{album.year}}</span>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <script src="app.js"></script>
+
+        </section>
     </main>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+    <script src="app.js"></script>
 </body>
 </html>
