Pt. 3 (Added filter)

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <section>
             <div class="row">
-                <div class="album col-4" v-for='album in albums'>
+                <div class="album col-4" v-for='album in albumsFiltered'>
                     <div class="card text-center">
                         <img :src="album.poster" class='mx-auto' alt="">
                         <div class="card-body">
